# couchbase-cxx-client

./: .clang-format  .clang-tidy  .cppcheck_suppressions.txt  .dockerignore  .gitignore  .gitmodules  .lsan_suppressions  .tsan_suppressions  .valgrind_suppressions.txt  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  PACKAGING.md  README.md  build_version.hxx.in  couchbase-sdk-cxx-black-duck-manifest.yaml  cpplint.cfg
core/crypto/: CMakeLists.txt  cbcrypto.cc  cbcrypto.h
core/io/: .mcbp_command.hxx.swp  CMakeLists.txt  config_tracker.cxx  config_tracker.hxx  configuration_belongs_to_session.hxx  dns_client.cxx  dns_client.hxx  dns_codec.hxx  dns_config.cxx  dns_config.hxx  dns_message.hxx  http_command.hxx  http_context.hxx  http_message.hxx  http_parser.cxx  http_parser.hxx  http_session.cxx  http_session.hxx  http_session_manager.hxx  http_streaming_parser.cxx  http_streaming_parser.hxx  http_streaming_response.cxx  http_streaming_response.hxx  http_traits.hxx  ip_protocol.hxx  mcbp_buffer_pool.hxx  mcbp_command.hxx  mcbp_command_id.hxx  mcbp_context.hxx  mcbp_message.cxx  mcbp_message.hxx  mcbp_output_queue.hxx  mcbp_parser.cxx  mcbp_parser.hxx  mcbp_session.cxx  mcbp_session.hxx  mcbp_traits.hxx  opaque_ring_table.hxx  query_cache.hxx  retry_action.hxx  (+6 more)
core/logger/: CMakeLists.txt  configuration.hxx  custom_rotating_file_sink.cxx  custom_rotating_file_sink.hxx  level.hxx  logger.cxx  logger.hxx
core/meta/: CMakeLists.txt  features.hxx  version.cxx  version.hxx
core/metrics/: CMakeLists.txt  constants.hxx  logging_meter.cxx  logging_meter.hxx  logging_meter_options.hxx  meter.hxx  meter_wrapper.cxx  meter_wrapper.hxx  noop_meter.hxx  otel_meter.cxx  otel_meter.hxx
core/platform/: CMakeLists.txt  backtrace.c  backtrace.h  base64.cc  base64.h  dirutils.cc  dirutils.h  random.cc  random.h  string_hex.cc  string_hex.h  terminate_handler.cc  terminate_handler.h  uuid.cc  uuid.h
core/sasl/: CMakeLists.txt  client.cc  client.h  context.cc  context.h  error.h  error_fmt.h  mechanism.cc  mechanism.h
core/tracing/: CMakeLists.txt  attribute_helpers.cxx  attribute_helpers.hxx  constants.hxx  noop_tracer.hxx  otel_tracer.cxx  otel_tracer.hxx  request_tracer.hxx  threshold_logging_options.hxx  threshold_logging_tracer.cxx  threshold_logging_tracer.hxx  tracer_wrapper.cxx  tracer_wrapper.hxx  wrapper_sdk_tracer.cxx  wrapper_sdk_tracer.hxx
couchbase/crypto/: CMakeLists.txt  aead_aes_256_cbc_hmac_sha512_provider.hxx  cbcrypto.cc  cbcrypto.h  decrypter.hxx  default_manager.hxx  default_transcoder.hxx  document.hxx  encrypted_fields.hxx  encrypter.hxx  encryption_result.hxx  insecure_keyring.hxx  internal.hxx  key.hxx  keyring.hxx  manager.hxx  transcoder.hxx
couchbase/io/: CMakeLists.txt  dns_client.hxx  dns_codec.hxx  dns_config.hxx  dns_message.hxx  http_command.hxx  http_context.hxx  http_message.hxx  http_parser.cxx  http_parser.hxx  http_session.hxx  http_session_manager.hxx  http_traits.hxx  ip_protocol.hxx  mcbp_command.hxx  mcbp_context.hxx  mcbp_message.cxx  mcbp_message.hxx  mcbp_parser.cxx  mcbp_parser.hxx  mcbp_session.hxx  mcbp_traits.hxx  query_cache.hxx  retry_context.hxx  retry_orchestrator.hxx  retry_reason.hxx  retry_reason_fmt.hxx  retry_strategy.hxx  streams.hxx
couchbase/management/: CMakeLists.txt  analytics_dataset.hxx  analytics_index.hxx  analytics_link.hxx  analytics_link_azure_blob_external.cxx  analytics_link_azure_blob_external.hxx  analytics_link_azure_blob_external_json.hxx  analytics_link_couchbase_remote.cxx  analytics_link_couchbase_remote.hxx  analytics_link_couchbase_remote_json.hxx  analytics_link_s3_external.cxx  analytics_link_s3_external.hxx  analytics_link_s3_external_json.hxx  bucket_settings.hxx  bucket_settings_json.hxx  collection_spec.hxx  design_document.hxx  design_document_fmt.hxx  eventing_function.hxx  eventing_function_json.hxx  eventing_status.hxx  eventing_status_json.hxx  query_index.hxx  rbac.hxx  rbac_fmt.hxx  rbac_json.hxx  scope_spec.hxx  search_index.hxx  search_index_json.hxx
couchbase/protocol/: cas.hxx  (+87 more)
examples/: CMakeLists.txt  async_game_server.cxx  bulk_base_api.cxx  bulk_transactional_api.cxx  bulk_transactional_get_replace.cxx  channels.cxx  distributed_mutex.cxx  error.cxx  game_server.cxx  minimal.cxx
observability/: CMakeLists.txt  fmt_log_record_exporter.cxx  fmt_log_record_exporter.hxx  logger.cxx  logger.hxx  otel_meter.cxx  otel_meter.hxx  otel_tracer.cxx
test/: CMakeLists.txt  another_simple_object.hxx  benchmark_helper_integration.hxx  benchmark_helper_native.hxx  benchmark_integration_get.cxx  benchmark_integration_replace.cxx  benchmark_native_get.cxx  config.json  main.cxx  patch.txt  profile.hxx  simple_object.hxx  test_helper.hxx  test_helper_integration.hxx  test_helper_native.cxx  test_helper_native.hxx  test_helper_streaming.hxx  test_integration_analytics.cxx  test_integration_analytics_management.cxx  test_integration_arithmetic.cxx  test_integration_binary_operations.cxx  test_integration_bucket_bootstrap.cxx  test_integration_bucket_management.cxx  test_integration_collection_management.cxx  test_integration_collection_manager_component.cxx  test_integration_collections.cxx  test_integration_columnar.cxx  test_integration_columnar_management.cxx  test_integration_columnar_query.cxx  test_integration_connect.cxx  test_integration_crud.cxx  test_integration_crud_component.cxx  test_integration_crypto.cxx  test_integration_diagnostics.cxx  test_integration_durability.cxx  test_integration_eventing_management.cxx  test_integration_examples.cxx  test_integration_handler_drop_lifetime.cxx  test_integration_http_session_manager.cxx  test_integration_management.cxx  (+113 more)
tools/: CMakeLists.txt  analytics.cxx  analytics.hxx  beam.cxx  beam.hxx  cbc.cxx  command.hxx  command_registry.cxx  command_registry.hxx  config.cxx  config.hxx  get.cxx  get.hxx  key_generator.cxx  key_generator.hxx  keygen.cxx  keygen.hxx  pillowfight.cxx  pillowfight.hxx  query.cxx  query.hxx  remove.cxx  remove.hxx  sysinfo.cxx  sysinfo.hxx  upsert.cxx  upsert.hxx  utils.cxx  utils.hxx  version.cxx  version.hxx
(+1911 files in other folders)
