add_subdirectory(utils)

integration_test(connect)
integration_test(management)
integration_test(crud)
integration_test(query)
integration_test(diagnostics)
integration_test(binary_operations)
integration_test(durability)
integration_test(arithmetic)
integration_test(collections)
integration_test(subdoc)
integration_test(analytics_management)
integration_test(bucket_management)
integration_test(collection_management)
integration_test(eventing_management)
integration_test(query_management)
integration_test(search_management)
integration_test(user_management)

unit_test(connection_string)
unit_test(utils)
unit_test(json_streaming_lexer)
unit_test(jsonsl)
target_link_libraries(test_unit_jsonsl jsonsl)

integration_benchmark(get)

add_subdirectory(tools)
