add_subdirectory(utils)

integration_test(connect)
integration_test(management)
integration_test(crud)
integration_test(query)
integration_test(diagnostics)
integration_test(binary_operations)
integration_test(durability)
integration_test(arithmetic)
integration_test(collections)
integration_test(subdoc)
integration_test(analytics)
integration_test(read_replica)
integration_test(tracer)
integration_test(meter)
integration_test(transcoders)

unit_test(connection_string)
unit_test(utils)
unit_test(json_transcoder)
unit_test(json_streaming_lexer)
unit_test(jsonsl)
unit_test(config_profiles)
unit_test(options)
target_link_libraries(test_unit_jsonsl jsonsl)

integration_benchmark(get)

add_subdirectory(tools)

transaction_test(transaction_context)
transaction_test(transaction_simple)
transaction_test(transaction_simple_async)
transaction_test(transaction_public_blocking_api)
transaction_test(transaction_public_async_api)

unit_test(transaction_logging)
unit_test(transaction_utils)
unit_test(waitable_op_list)
